# accords-platform

./: Makefile.am  configure.ac
model/: Makefile.am  migrate.sh  occi-infrastructure.xml  occi.xsd
model/migrate/: 0.1.0_to_0.2.xsl  latest.xsl
tools/codegen/: codegen.py
