#
# ACCORDS model Makefile.am
#
# Copyright 2013, Jean Parpaillon, All rights reserved
#
# Authors:
#   Jean Parpaillon <jparpaillon@mandriva.com>
#
extensions = \
	azure.xml \
	backend.xml \
	computenext.xml \
	cords.xml \
	deltacloud.xml \
	easiclouds.xml \
	example.xml \
	nagios.xml \
	occi-infrastructure.xml \
	onapp.xml \
	opennebula.xml \
	openstack_occi.xml \
	openstack.xml \
	paas.xml \
	uses.xml

EXTRA_DIST = $(extensions)
